# db-performance-observer

./: Cargo.toml  README.md  docker-compose.yml
docs/: DESIGN.md  DESIGN_zh.md  Plan.md  Plan_zh.md  USAGE_zh.md
init/mysql/: 01_schema.sql
init/postgres/: 01_schema.sql
results/mysql/1000000/: bench.json  bench.md
results/mysql/2000000/: bench.json  bench.md
results/mysql/500000/: bench.json  bench.md
results/mysql/5000000/: bench.json  bench.md
results/mysql/summary/: summary.md
results/postgres/1000000/: bench.json  bench.md
results/postgres/2000000/: bench.json  bench.md
results/postgres/500000/: bench.json  bench.md
results/postgres/5000000/: bench.json  bench.md
results/postgres/summary/: summary.md
scripts/: format_results.py  init_db.sh  plot_results.py  run_all.sh
src/: bench.rs  config.rs  generator.rs  load.rs  main.rs
