[package]
name = "db-performance-obvser"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37", features = ["macros", "rt-multi-thread", "time", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
mysql_async = "0.32"
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
rand = "0.8"
rand_distr = "0.4"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
bytes = "1"
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
